fix: improve button contrast for better accessibility
- Adjust button background color (--BUTTON-COLOR) from #976f53 to #623f2a to enhance contrast ratio.
- Update --BUTTON-HOVER-COLOR from #b08367 to #976f53 for better visibility.
- Add hover and focus-visible styles for input[type=submit] elements to ensure consistent interaction feedback.
- Ensure all button and input submit button styles meet accessibility standards.

--- a/css/styles.css
+++ b/css/styles.css
@@ -10,8 +10,8 @@
     --BTT-ACTIVE-COLOR: #010409;
     --BTT-HOVER-COLOR: #474751;
     --BUTTON-ACTIVE-COLOR: #623f2a;
-    --BUTTON-COLOR: #976f53;
-    --BUTTON-HOVER-COLOR: #b08367;
+    --BUTTON-COLOR: #623f2a;
+    --BUTTON-HOVER-COLOR: #976f53;
     --CARD-BGCOLOR: #f9dfca;
     --ITEM-BGCOLOR: #976f53;
     --FONT-COLOR: #010409;
@@ -91,7 +91,9 @@ button {
 }
 
 button:hover,
-button:focus-visible {
+button:focus-visible,
+input[type=submit]:hover,
+input[type=submit]:focus-visible {
     background-color: var(--BUTTON-HOVER-COLOR);
     transition: 0.2s;
 }
